--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,26 @@
     color: white;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
 }
 
 .escola-imagem{
     width: 20%;
 }
+
+.escola{
+    background-image: linear-gradient(#2e3746,#4ca0b3);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: ;
+}
+
