--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@
     padding: 24px 0;
   }
   
-  .escola-div-conteudo{
+  .escola-conteudo{
     width: 35%;
   }
   
@@ -58,3 +58,11 @@
     padding: 24px 0;
   }
   
+  estudantes-imagem {
+    width: 24px;
+  }
+
+  estudantes-icone {
+    width: 24px;
+    padding: 4px 8px;
+  }
