--- a/style/style.css
+++ b/style/style.css
@@ -90,3 +90,26 @@ body{
     height: 60px;
     padding: 12px 0;
   }
+
+
+  @media (max-width: 768px) {
+    .cabecalho{
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .cabecalho-lista-item{
+      display: block;
+      margin: 8px 0;
+    }
+
+    .escola{
+      flex-direction: column;
+      text-align: center;
+      padding: 16px;
+    }
+
+    .escola-imagem{
+      
+    }
+  }
