--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
 
 body{
-  font-family: Cal Sans;
+  font-family: "Roboto", sans-serif;
 }
 
   .cabecalho{
@@ -110,6 +110,7 @@ body{
     }
 
     .escola-imagem{
-      
+      width: 80%;
+      margin-top: 16px;
     }
   }
