--- a/style/style.css
+++ b/style/style.css
@@ -3,11 +3,11 @@
     padding: 0;
   }
   
-  @import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-body{
-  font-family: "Roboto", sans-serif;
-}
+  body{
+     font-family: "Roboto", sans-serif;
+  }
 
   .cabecalho{
     background-color: #424e61; 
