--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
   
   @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-  header{
+  header a{
     color: white;
     text-decoration: none;
   }
